# Hobby-Voice-Command-Line

./: .gitignore  .gitmodules  INSTALL.md  README.md  USER_GUIDE.md  build.gradle  settings.gradle
LuaBridge/: .gitignore  build.gradle
LuaBridge/lua-bridge/: CMakeLists.txt
LuaBridge/lua-bridge/src/: bridge.cc  lua-fix.h
LuaBridge/src/main/: AndroidManifest.xml
LuaBridge/src/main/java/org/hobby/luabridge/: LuaBridge.kt  LuaBridgeInitializer.kt  LuaDispatcher.kt  LuaMethods.kt
app/: build.gradle
app/lua-bridge/src/: bridge.cc  lua-fix.c
app/schemas/org.hobby.database.AppDatabase/: 1.json
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/license/: Alphacephei_Vosk_API.LICENSE.txt  Lua.LICENSE.txt  main.LICENSE.txt  vosk-model-small-en-us-0.15.LICENSE.txt
app/src/main/assets/lua/: hello-world.lua
app/src/main/assets/lua/actions/: again.lua  example.lua  license.lua  music.lua  next.lua  note.lua  number.lua  play.lua  previous.lua  quit.lua  say.lua  skip.lua  stop.lua  timer.lua  watch.lua
app/src/main/assets/lua/lib/: argparse.lua  base.lua  duration.lua  intents.lua  say.lua  text-to-number.lua  util.lua
app/src/main/java/org/hobby/activity/: MainActivity.kt
app/src/main/java/org/hobby/chat/: ChatRecyclerView.kt  ChatViewHolder.kt
app/src/main/java/org/hobby/database/: AppDatabase.kt  BooleanSetting.kt  BooleanSettingDAO.kt
app/src/main/java/org/hobby/dispatcher/: CountedBroadcastReceiver.kt  IntentDispatcher.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: chat_row_item.xml  main.xml
app/src/main/res/values/: dimens.xml  strings.xml
models/: Apache.Alpha.Cephei.2.0.txt  build.gradle  pack-model.py
(+5 files in other folders)
